# render_engine_family

./: .gitignore  CMakeLists.txt  Readme.md
black_hole_shader/: CMakeLists.txt  main.cpp
engine_core/include/: entry_point.h  glfw_render.h  window.h
engine_core/include/camera/: camera.h
examples/black_hole_shader/: CMakeLists.txt
examples/geometry_model_reconstruction/: CMakeLists.txt  main.cpp  model_intersection.h  snapshot.h
examples/mrc_texture_example/: main.cpp
examples/mrc_texture_example/multi_material_test/: Untitled.mtl
examples/sfm_model_reconstruction/: CMakeLists.txt  main.cpp  snapshot.h  test.cpp
examples/sfm_model_reconstruction/sfm/: run_sfm.h
model_reconstruction/: CMakeLists.txt  main.cpp  model_intersection.cpp  model_intersection.h  snapshot.h
model_reconstruction_example/: CMakeLists.txt  main.cpp  snapshot.h
model_render_core/: CMakeLists.txt
model_render_core/include/: compute_normals.h  main_pipeline.h
model_render_core/include/model/: io.h  material.h  model.h  model_geometry.h  texture.h
model_render_core/include/utils/: compute_normals.h  graphics_tools.h  point_projection.h  tiled_rasterizer.h  vertices_transform.h
model_render_core_example/: main.cpp
mrc_texture_example/: CMakeLists.txt  main.cpp  texture_cube.mtl
ray_marching_core/: CMakeLists.txt
ray_marching_core/include/: internal.h  ray_marching_iterator.h  ray_marching_params.h  ray_marching_result.h  scene.h
ray_marching_core/include/curvature/: icurvature.h  spherical_curvature.h
ray_marching_core/include/shading/: material.h
shader_core/: CMakeLists.txt
shader_core/include/: entry_point.h  glfw_render.h  render.h  window.h
shader_core/include/camera/: camera.h  camera_view.h  camera_view_iterator.h
shader_core/include/utils/: ray.h  vec.h
shader_core_examples/: CMakeLists.txt  color_check.cpp  hole_frame_color_check.cpp  simple_ray_tracer.cpp
